# prueba-ABPO

./: .env  README.md  app.py  pyproject.toml
core/: auth.py  security.py
db/: author.db  db.py  library.db
models/: auth_model.py  author_model.py  book_model.py  user_model.py
routes/: auth_router.py  author_router.py  book_router.py  user_router.py
schemas/: auth_schema.py  author_schema.py  book_schema.py  user_schema.py
services/: exceptions.py
services/authors/: author_services.py
services/books/: book_services.py
services/user/: user_services.py
tests/: README.md  author_tests.py  book_tests.py  conftest.py  test_api_endpoints.py  test_author_services.py  test_book_services.py
